# vector

./: CMakeLists.txt  README.md  library.c  library.h  vector.c  vector.h
include/fluent/vector/: vector.c  vector.h
